unpackaged/main/default/objects/Credit_Review__c/Credit_Review__c.object-meta.xml
<CustomObject>
    <label>Credit Review</label>
    <nameField>
        <displayFormat>CR-{00000000}</displayFormat>
        <label>Credit Review ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Reviews</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>