unpackaged/main/default/objects/Credit_Review__c/fields/Accepts_CC__c.field-meta.xml
<CustomField>
    <fullName>Accepts_CC__c</fullName>
    <label>Accepts CC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>