unpackaged/main/default/objects/Credit_Review__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Reviews</relationshipLabel>
    <relationshipName>Credit_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>