unpackaged/main/default/objects/Credit_Review__c/fields/All_Mitigating_Factors__c.field-meta.xml
<CustomField>
    <fullName>All_Mitigating_Factors__c</fullName>
    <description>This field will be used as a summary field in the B of I reports.  It will be a cumulative field that shows all the Mitigating factors that policy exceptions were made.</description>
    <formula>IF(TEXT(Mitigating_Factor_3__c) &lt;&gt; '', 
TEXT(Mitigating_Factor_1__c) + ',' + ' ' + TEXT(Mitigating_Factor_2__c) + ',' + ' ' + TEXT(Mitigating_Factor_3__c), 
IF(TEXT(Mitigating_Factor_2__c) &lt;&gt; '',TEXT(Mitigating_Factor_1__c) + ',' + ' ' + TEXT(Mitigating_Factor_2__c), 
TEXT(Mitigating_Factor_1__c)))</formula>
    <inlineHelpText>This field will be used as a summary field in the B of I reports.  It will be a cumulative field that shows all the Mitigating factors that policy exceptions were made.</inlineHelpText>
    <label>All Mitigating Factors</label>
    <type>Text</type>
</CustomField>