unpackaged/main/default/objects/Credit_Review__c/fields/Allowable_Exceptions__c.field-meta.xml
<CustomField>
    <fullName>Allowable_Exceptions__c</fullName>
    <description>Allowable Exception for BofI reporting.</description>
    <inlineHelpText>Please select the allowable exceptions made for this transaction.</inlineHelpText>
    <label>Allowable Exceptions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FICO &lt; Program Parameters</fullName>
            </value>
            <value>
                <fullName>No Installment Loan on CBR</fullName>
            </value>
            <value>
                <fullName>UCC Filing by Competitor</fullName>
            </value>
            <value>
                <fullName>Average Daily Balance &lt; $1000</fullName>
            </value>
            <value>
                <fullName>New Bank Account (opened w/in 60 days)</fullName>
            </value>
            <value>
                <fullName>Restricted Industry</fullName>
            </value>
            <value>
                <fullName>Directory Assistance Not Found</fullName>
            </value>
            <value>
                <fullName>LL Verbal Unavailable</fullName>
            </value>
            <value>
                <fullName>&lt; 50% Ownership</fullName>
            </value>
            <value>
                <fullName>Renewals (Netting less &amp; funding early)</fullName>
            </value>
            <value>
                <fullName>Absentee Owner (Non-BOFI)</fullName>
            </value>
            <value>
                <fullName>Overdrafts (10 averaged over 3 months)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>