unpackaged/main/default/objects/Credit_Review__c/fields/Analyst_Comment_1__c.field-meta.xml
<CustomField>
    <fullName>Analyst_Comment_1__c</fullName>
    <label>Analyst Comment #1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>