unpackaged/main/default/objects/Credit_Review__c/fields/Approval_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Expiration_Date__c</fullName>
    <description>This field will capture the expiration date for the customer's approval.</description>
    <inlineHelpText>This field will capture the expiration date for the customer's approval.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>