unpackaged/main/default/objects/Credit_Review__c/fields/Approval_Recomendation_By__c.field-meta.xml
<CustomField>
    <fullName>Approval_Recomendation_By__c</fullName>
    <description>This field will be updated when an Analyst requests a second review and will hold the name of the analyst that requested the second review.</description>
    <inlineHelpText>This field will be updated when an Analyst requests a second review and will hold the name of the analyst that requested the second review.</inlineHelpText>
    <label>Approval Recomendation By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>