unpackaged/main/default/objects/Credit_Review__c/fields/Approval_Recommendation_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Recommendation_Date__c</fullName>
    <description>This field will be updated when an Analyst requests a second review and will contain the date the analyst that requested the second review.</description>
    <inlineHelpText>This field will be updated when an Analyst requests a second review and will contain the date the analyst that requested the second review.</inlineHelpText>
    <label>Approval Recommendation Date</label>
    <type>DateTime</type>
</CustomField>