unpackaged/main/default/objects/Credit_Review__c/fields/ApprovalRecomendationBy__c.field-meta.xml
<CustomField>
    <fullName>ApprovalRecomendationBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Recomendation By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CreditReviews1</relationshipName>
    <type>Lookup</type>
</CustomField>