unpackaged/main/default/objects/Credit_Review__c/fields/ApprovedBy__c.field-meta.xml
<CustomField>
    <fullName>ApprovedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CreditReviews</relationshipName>
    <type>Lookup</type>
</CustomField>