unpackaged/main/default/objects/Credit_Review__c/fields/AU_Review_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>AU_Review_Completed_By__c</fullName>
    <label>Gold Review Completed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>