unpackaged/main/default/objects/Credit_Review__c/fields/AU_Review_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>AU_Review_Completed_Date__c</fullName>
    <label>Gold Review Completed Date</label>
    <type>DateTime</type>
</CustomField>