unpackaged/main/default/objects/Credit_Review__c/fields/Automated_Approval_Issued_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Automated_Approval_Issued_Date_Time__c</fullName>
    <description>Tracks the date and time an automated approval is issued. Populated by ROS if the result is automatic approval</description>
    <label>Automated Approval Issued Date/Time</label>
    <type>DateTime</type>
</CustomField>