unpackaged/main/default/objects/Credit_Review__c/fields/AutomatedCreditProcess__c.field-meta.xml
<CustomField>
    <fullName>AutomatedCreditProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field will be checked when the Credit Review was created by the Automated Credit Process trigger</description>
    <label>AutomatedCreditProcess</label>
    <type>Checkbox</type>
</CustomField>