unpackaged/main/default/objects/Credit_Review__c/fields/Automation_Notes_for_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Automation_Notes_for_Analyst__c</fullName>
    <label>Automation Notes for Analyst</label>
    <type>TextArea</type>
</CustomField>