unpackaged/main/default/objects/Credit_Review__c/fields/Average_Daily_Sales__c.field-meta.xml
<CustomField>
    <fullName>Average_Daily_Sales__c</fullName>
    <description>This field will calculate Average Daily Sales based on a 12 month year and 22 business days.  Formula:
Average Daily Sales = (Annual Revenue / 12) / 22</description>
    <formula>( Annual_Revenue__c / 12 ) / 22</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field will calculate Average Daily Sales based on a 12 month year and 22 business days.  Formula:
Average Daily Sales = (Annual Revenue / 12) / 22</inlineHelpText>
    <label>Average Daily Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>