unpackaged/main/default/objects/Credit_Review__c/fields/Avg_Deposits_Amount__c.field-meta.xml
<CustomField>
    <fullName>Avg_Deposits_Amount__c</fullName>
    <formula>IF(TEXT(Credit_Review_Version__c) = 'Version 2',  (Sum_of_Counter_Deposits_Amount_v2__c + Sum_of_Other_Deposits_Amount_v2__c) /  Number_of_Months_Reviewed_v2__c, 
(Sum_of_Counter_Deposits_Amount__c +  Sum_of_Other_Deposits_Amount__c) / Number_of_Months_Reviewed__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Deposits ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>