unpackaged/main/default/objects/Credit_Review__c/fields/BA_Done_Balances__c.field-meta.xml
<CustomField>
    <fullName>BA_Done_Balances__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Legacy Label Change:BA - Done - Balances===&gt;BA - Done - Cash Flow Trends</description>
    <label>BA - Done - Cash Flow Trends</label>
    <type>Checkbox</type>
</CustomField>