unpackaged/main/default/objects/Credit_Review__c/fields/BA_Done_Deposits__c.field-meta.xml
<CustomField>
    <fullName>BA_Done_Deposits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BA - Done - Bank Activity</label>
    <type>Checkbox</type>
</CustomField>