unpackaged/main/default/objects/Credit_Review__c/fields/BA_Done_Official_Statements__c.field-meta.xml
<CustomField>
    <fullName>BA_Done_Official_Statements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BA - Done - Official Statements</label>
    <type>Checkbox</type>
</CustomField>