unpackaged/main/default/objects/Credit_Review__c/fields/BA_Notes_Balances__c.field-meta.xml
<CustomField>
    <fullName>BA_Notes_Balances__c</fullName>
    <description>Legacy Label Change:BA - Done - Balances===&gt;BA - Done - Cash Flow Trends</description>
    <label>BA - Notes - Cash Flow Trends</label>
    <type>TextArea</type>
</CustomField>