unpackaged/main/default/objects/Credit_Review__c/fields/BA_Notes_Competitor_on_Banks__c.field-meta.xml
<CustomField>
    <fullName>BA_Notes_Competitor_on_Banks__c</fullName>
    <label>BA - Notes - Competitor on Banks</label>
    <type>TextArea</type>
</CustomField>