unpackaged/main/default/objects/Credit_Review__c/fields/BA_Notes_Deposits__c.field-meta.xml
<CustomField>
    <fullName>BA_Notes_Deposits__c</fullName>
    <label>BA - Notes -  Bank Activity</label>
    <type>TextArea</type>
</CustomField>