unpackaged/main/default/objects/Credit_Review__c/fields/BA_Notes_Official_Statements__c.field-meta.xml
<CustomField>
    <fullName>BA_Notes_Official_Statements__c</fullName>
    <label>BA - Notes - Official Statements</label>
    <type>TextArea</type>
</CustomField>