unpackaged/main/default/objects/Credit_Review__c/fields/BA_Stip_Competitor_on_Banks__c.field-meta.xml
<CustomField>
    <fullName>BA_Stip_Competitor_on_Banks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BA - Stip - Competitor on Banks</label>
    <type>Checkbox</type>
</CustomField>