unpackaged/main/default/objects/Credit_Review__c/fields/BA_Stip_Deposits__c.field-meta.xml
<CustomField>
    <fullName>BA_Stip_Deposits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BA - Stip - Bank Activity</label>
    <type>Checkbox</type>
</CustomField>