unpackaged/main/default/objects/Credit_Review__c/fields/BA_Stip_Notes_Balances__c.field-meta.xml
<CustomField>
    <fullName>BA_Stip_Notes_Balances__c</fullName>
    <description>Legacy Label Change:BA - Stip - Notes - Balances===&gt;BA - Stip - Notes - Cash Flow Trends</description>
    <label>BA - Stip - Notes - Cash Flow Trends</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>