unpackaged/main/default/objects/Credit_Review__c/fields/BA_Stip_Notes_Competitor_on_Banks__c.field-meta.xml
<CustomField>
    <fullName>BA_Stip_Notes_Competitor_on_Banks__c</fullName>
    <label>BA Stip Notes Competitor on Banks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>