unpackaged/main/default/objects/Credit_Review__c/fields/BA_Stip_Notes_Deposits__c.field-meta.xml
<CustomField>
    <fullName>BA_Stip_Notes_Deposits__c</fullName>
    <label>BA Stip Notes Bank Activity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>