unpackaged/main/default/objects/Credit_Review__c/fields/Bank_Analysis_Notes__c.field-meta.xml
<CustomField>
    <fullName>Bank_Analysis_Notes__c</fullName>
    <label>Bank Analysis Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>