unpackaged/main/default/objects/Credit_Review__c/fields/Bank_Entry_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Bank_Entry_Complete_Date__c</fullName>
    <label>Bank Entry Complete Date</label>
    <type>DateTime</type>
</CustomField>