unpackaged/main/default/objects/Credit_Review__c/fields/BC_Done_Lexis_Nexis__c.field-meta.xml
<CustomField>
    <fullName>BC_Done_Lexis_Nexis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BC - Done - Lexis Nexis</label>
    <type>Checkbox</type>
</CustomField>