unpackaged/main/default/objects/Credit_Review__c/fields/BC_Done_SIC_Code_Industry_Restrict__c.field-meta.xml
<CustomField>
    <fullName>BC_Done_SIC_Code_Industry_Restrict__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BC - Done - SIC Code / Industry Restrict</label>
    <type>Checkbox</type>
</CustomField>