unpackaged/main/default/objects/Credit_Review__c/fields/BC_Done_TIB_Ownership_Industry__c.field-meta.xml
<CustomField>
    <fullName>BC_Done_TIB_Ownership_Industry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BC - Done - Ownership</label>
    <type>Checkbox</type>
</CustomField>