unpackaged/main/default/objects/Credit_Review__c/fields/BC_Done_Website__c.field-meta.xml
<CustomField>
    <fullName>BC_Done_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BC - Done - Website</label>
    <type>Checkbox</type>
</CustomField>