unpackaged/main/default/objects/Credit_Review__c/fields/BC_Notes_Absentee_Ownership_Miami__c.field-meta.xml
<CustomField>
    <fullName>BC_Notes_Absentee_Ownership_Miami__c</fullName>
    <label>BC - Notes - High Risk Miami</label>
    <type>TextArea</type>
</CustomField>