unpackaged/main/default/objects/Credit_Review__c/fields/BC_Notes_Approvable_Credit__c.field-meta.xml
<CustomField>
    <fullName>BC_Notes_Approvable_Credit__c</fullName>
    <label>BC - Notes - Approvable Credit</label>
    <type>TextArea</type>
</CustomField>