unpackaged/main/default/objects/Credit_Review__c/fields/BC_Notes_Lexis_Nexis__c.field-meta.xml
<CustomField>
    <fullName>BC_Notes_Lexis_Nexis__c</fullName>
    <label>BC - Notes - Lexis Nexis</label>
    <type>TextArea</type>
</CustomField>