unpackaged/main/default/objects/Credit_Review__c/fields/BC_Notes_License__c.field-meta.xml
<CustomField>
    <fullName>BC_Notes_License__c</fullName>
    <label>BC - Notes - License</label>
    <type>TextArea</type>
</CustomField>