unpackaged/main/default/objects/Credit_Review__c/fields/BC_Notes_Paynet__c.field-meta.xml
<CustomField>
    <fullName>BC_Notes_Paynet__c</fullName>
    <label>BC - Notes - Paynet</label>
    <type>TextArea</type>
</CustomField>