unpackaged/main/default/objects/Credit_Review__c/fields/BC_Notes_SIC_Code_Industry_Restric__c.field-meta.xml
<CustomField>
    <fullName>BC_Notes_SIC_Code_Industry_Restric__c</fullName>
    <label>BC - Notes - SIC Code / Industry Restric</label>
    <type>TextArea</type>
</CustomField>