unpackaged/main/default/objects/Credit_Review__c/fields/BC_Notes_TIB_Ownership_Industry__c.field-meta.xml
<CustomField>
    <fullName>BC_Notes_TIB_Ownership_Industry__c</fullName>
    <label>BC - Notes - Ownership</label>
    <type>TextArea</type>
</CustomField>