unpackaged/main/default/objects/Credit_Review__c/fields/BC_Notes_UCC_Filings__c.field-meta.xml
<CustomField>
    <fullName>BC_Notes_UCC_Filings__c</fullName>
    <label>BC - Notes - UCC Filings</label>
    <type>TextArea</type>
</CustomField>