unpackaged/main/default/objects/Credit_Review__c/fields/BC_Notes_Website__c.field-meta.xml
<CustomField>
    <fullName>BC_Notes_Website__c</fullName>
    <label>BC - Notes - Website</label>
    <type>TextArea</type>
</CustomField>