unpackaged/main/default/objects/Credit_Review__c/fields/BC_Stip_Absentee_Ownership_Miami_D__c.field-meta.xml
<CustomField>
    <fullName>BC_Stip_Absentee_Ownership_Miami_D__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BC - Stip - High Risk Miami</label>
    <type>Checkbox</type>
</CustomField>