unpackaged/main/default/objects/Credit_Review__c/fields/BC_Stip_Approvable_Credit__c.field-meta.xml
<CustomField>
    <fullName>BC_Stip_Approvable_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BC - Stip - Approvable Credit</label>
    <type>Checkbox</type>
</CustomField>