unpackaged/main/default/objects/Credit_Review__c/fields/BC_Stip_Notes_Absentee_Ownership_Miami_D__c.field-meta.xml
<CustomField>
    <fullName>BC_Stip_Notes_Absentee_Ownership_Miami_D__c</fullName>
    <label>BC Stip Notes High Risk Miami</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>