unpackaged/main/default/objects/Credit_Review__c/fields/BC_Stip_Notes_Approvable_Credit__c.field-meta.xml
<CustomField>
    <fullName>BC_Stip_Notes_Approvable_Credit__c</fullName>
    <label>BC Stip Notes Approvable Credit</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>