unpackaged/main/default/objects/Credit_Review__c/fields/BC_Stip_Notes_Lexis_Nexis__c.field-meta.xml
<CustomField>
    <fullName>BC_Stip_Notes_Lexis_Nexis__c</fullName>
    <label>BC Stip Notes Lexis Nexis</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>