unpackaged/main/default/objects/Credit_Review__c/fields/BC_Stip_Notes_Paynet__c.field-meta.xml
<CustomField>
    <fullName>BC_Stip_Notes_Paynet__c</fullName>
    <label>BC Stip Notes Paynet</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>