unpackaged/main/default/objects/Credit_Review__c/fields/BC_Stip_Notes_SIC_Code_Industry_Restrict__c.field-meta.xml
<CustomField>
    <fullName>BC_Stip_Notes_SIC_Code_Industry_Restrict__c</fullName>
    <label>BC Stip Notes SIC Code Industry Restrict</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>