unpackaged/main/default/objects/Credit_Review__c/fields/BC_Stip_Paynet__c.field-meta.xml
<CustomField>
    <fullName>BC_Stip_Paynet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BC - Stip - Paynet</label>
    <type>Checkbox</type>
</CustomField>