unpackaged/main/default/objects/Credit_Review__c/fields/Beginning_Balance_Average__c.field-meta.xml
<CustomField>
    <fullName>Beginning_Balance_Average__c</fullName>
    <label>Beginning Balance Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>