unpackaged/main/default/objects/Credit_Review__c/fields/BK_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>BK_Open_Date__c</fullName>
    <description>This field will capture the date that a customer's BK was opened.</description>
    <inlineHelpText>This field will capture the date that a customer's BK was opened.</inlineHelpText>
    <label>BK Open Date</label>
    <type>Date</type>
</CustomField>