unpackaged/main/default/objects/Credit_Review__c/fields/BK_Type__c.field-meta.xml
<CustomField>
    <fullName>BK_Type__c</fullName>
    <description>This field will capture the which type of BK that the customer has had.</description>
    <inlineHelpText>This field will capture the which type of BK that the customer has had.</inlineHelpText>
    <label>BK Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>