unpackaged/main/default/objects/Credit_Review__c/fields/Blanket_UCC_Filed__c.field-meta.xml
<CustomField>
    <fullName>Blanket_UCC_Filed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blanket UCC Filed</label>
    <type>Checkbox</type>
</CustomField>