unpackaged/main/default/objects/Credit_Review__c/fields/BOFI_Deal__c.field-meta.xml
<CustomField>
    <fullName>BOFI_Deal__c</fullName>
    <description>This field will capture if a deal will be run through as a BofI deal.  The user will need to make a selection prior approving the deal.</description>
    <inlineHelpText>Please select if this transaction will be funded through BofI before approving the deal.</inlineHelpText>
    <label>BOFI Deal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>