unpackaged/main/default/objects/Credit_Review__c/fields/Broker_Account__c.field-meta.xml
<CustomField>
    <fullName>Broker_Account__c</fullName>
    <label>Broker Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>