unpackaged/main/default/objects/Credit_Review__c/fields/Broker_Decline_Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Broker_Decline_Other_Reason__c</fullName>
    <label>Broker Decline Other Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>