unpackaged/main/default/objects/Credit_Review__c/fields/Broker_Tier__c.field-meta.xml
<CustomField>
    <fullName>Broker_Tier__c</fullName>
    <label>Broker Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 1 Special</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>