unpackaged/main/default/objects/Credit_Review__c/fields/Business_Credit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Business_Credit_Notes__c</fullName>
    <label>Business Credit Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>