unpackaged/main/default/objects/Credit_Review__c/fields/Business_Loan_Approval_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Business_Loan_Approval_Template_Id__c</fullName>
    <formula>IF(
AND(
NOT(ISBLANK(Opportunity__r.Broker_Account__c)),
NOT(ISPICKVAL(Opportunity__r.Broker_Tier__c ,'Referral Partner')),
OR(
ISPICKVAL(Opportunity__r.Type,'NEW'),
ISPICKVAL(Opportunity__r.Type,'CONCURRENT'))
), 
'a0S8000000MrZBI',
'a0S8000000MrZB8'
)</formula>
    <label>Business Loan Approval Template Id</label>
    <type>Text</type>
</CustomField>