unpackaged/main/default/objects/Credit_Review__c/fields/Commercial_Decline_Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Decline_Other_Reason__c</fullName>
    <description>This field will capture the reason a commercial deal was declined.</description>
    <inlineHelpText>Please select the reasons a commercial deal was declined.</inlineHelpText>
    <label>Commercial Decline Other Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>