unpackaged/main/default/objects/Credit_Review__c/fields/Commercial_Review_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Review_Completed_Date__c</fullName>
    <description>This field will capture the date in which a Commercial Review is completed.</description>
    <label>Commercial Review Completed Date</label>
    <type>DateTime</type>
</CustomField>