unpackaged/main/default/objects/Credit_Review__c/fields/Competitor_Review_Complete__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Review_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Competitor Review Complete</label>
    <type>Checkbox</type>
</CustomField>